--- a/src/components/ChessSplitView.css
+++ b/src/components/ChessSplitView.css
@@ -5,28 +5,26 @@ body {
 
 .split-view {
     display: flex;
-    height: 100vh;
+    height: 50vh;
     overflow: hidden;
     position: relative;
 }
 
 .quarter {
     width: 25%;
-    height: 100%;
+    height: auto;
+    position: absolute;
+    top: -30vh;
 }
 
 .left {
     background: linear-gradient(to right, #f8f9fa, #e9ecef);
-    position: absolute;
-    top: -40vh;
 }
 
 .right {
     position: absolute;
     right: 0;
     background: linear-gradient(to right, #f8f9fa, #e9ecef);
-    position: absolute;
-    top: -40vh;
 }
 
 canvas {
